--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -108,6 +108,66 @@ Image:hover{
         grid-template-columns: repeat(1,1fr);
         /* padding: 20px 0px; 
 		padding-top: 200px;  */
-      height:auto;
+      height:210px;
       width:auto
-      }}
+      }
+    .input{
+      height:auto;
+      width:300px
+    }
+    
+    }
+
+      @media screen and (min-width:700px) and (max-width:1200px){
+        #navbar{
+          display: grid;
+          grid-template-columns: repeat(1,1fr);
+          /* padding: 20px 0px; 
+      padding-top: 200px;  */
+        height:210px;
+        width:auto
+        }
+        .input{
+          height:auto;
+          width:500px
+        }
+      
+      }
+
+      @media screen and (min-width:700px) and (max-width:1200px){
+        #nave{
+          display: grid;
+          grid-template-columns: repeat(6,1fr);
+          /* padding: 20px 0px; 
+      padding-top: 200px;  */
+        height:auto;
+        width:auto
+        }
+        .live{
+          display: grid;
+          grid-template-columns: repeat(1,1fr);
+          height:auto;
+          width:50px
+        }
+      }
+
+      @media screen and (min-width:300px) and (max-width:700px){
+        #nave{
+          display: grid;
+          grid-template-columns: repeat(4,1fr);
+          /* padding: 20px 0px; 
+      padding-top: 200px;  */
+        height:auto;
+        width:auto
+        }
+        .live{
+          display: grid;
+          grid-template-columns: repeat(1,1fr);
+          height:auto;
+          width:50px
+        }
+      }
+
+     
+
+
